feat: 옷차림 예측 기능 추가 (미완성)